testing_temp/temp-compiler_output__Time_Adimensional_float64_uint16__.txt
testing_temp\temp-test__Time_Adimensional_float64_uint16__.cpp: In function 'int main(int, char**)':
testing_temp\temp-test__Time_Adimensional_float64_uint16__.cpp:9:70: error: invalid use of incomplete type 'struct dim_analysis::Unmatched_dimensions_in_addition_between<double, Dimensions<std::ratio<0ll>, std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, short unsigned int, Dimensions<std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
             std::cout << (float64<Time>(16) + uint16<Adimensional>(32)) << std::endl;;std::cout << (float64<Time>(32) - uint16<Adimensional>(16));;
                                                                      ^
In file included from testing_temp\temp-test__Time_Adimensional_float64_uint16__.cpp:3:0:
testing_temp\../dimensional_analysis.h:242:26: note: declaration of 'struct dim_analysis::Unmatched_dimensions_in_addition_between<double, Dimensions<std::ratio<0ll>, std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, short unsigned int, Dimensions<std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
   SAME_UNITS_OPERATOR(+, Unmatched_dimensions_in_addition_between)
                          ^
testing_temp\../dimensional_analysis.h:194:94: note: in definition of macro 'SAME_UNITS_OPERATOR'
    template<typename NumT_lhs, typename DimsLhs, typename NumT_rhs, typename DimsRhs> struct ERROR_MESSAGE;\
                                                                                              ^~~~~~~~~~~~~
testing_temp\temp-test__Time_Adimensional_float64_uint16__.cpp:9:144: error: invalid use of incomplete type 'struct dim_analysis::Unmatched_dimensions_in_subtraction_between<double, Dimensions<std::ratio<0ll>, std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, short unsigned int, Dimensions<std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
             std::cout << (float64<Time>(16) + uint16<Adimensional>(32)) << std::endl;;std::cout << (float64<Time>(32) - uint16<Adimensional>(16));;
                                                                                                                                                ^
In file included from testing_temp\temp-test__Time_Adimensional_float64_uint16__.cpp:3:0:
testing_temp\../dimensional_analysis.h:243:26: note: declaration of 'struct dim_analysis::Unmatched_dimensions_in_subtraction_between<double, Dimensions<std::ratio<0ll>, std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, short unsigned int, Dimensions<std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
   SAME_UNITS_OPERATOR(-, Unmatched_dimensions_in_subtraction_between)
                          ^
testing_temp\../dimensional_analysis.h:194:94: note: in definition of macro 'SAME_UNITS_OPERATOR'
    template<typename NumT_lhs, typename DimsLhs, typename NumT_rhs, typename DimsRhs> struct ERROR_MESSAGE;\
                                                                                              ^~~~~~~~~~~~~
